# example-shm

./: .coveragerc  .gitignore  .pylintrc  Acc_4DOF.txt  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini
config/: mqtt.json  production.json.template  r-pi.json.template  replay.json.template  test.json  test.json.template
record/: record.py  replay_mqtt.py
record/mqtt_recordings/: metadata.jsonl
src/: experiment_1.py  experiment_2.py  main.py
src/config/: mqtt.json
src/cp-sens/: experiment_1.py
src/cp-sens/config/: mqtt.json
src/cp-sens/methods/: sysID.py
src/data/accel/: accelerometer.py  aligner.py  constants.py  metadata.py  metadata_constants.py  random.py
src/data/comm/: mqtt.py
src/data/functions/: natural_freq.py
src/data/sources/: mqtt.py
src/examples/: README.md  acceleration_readings.py  aligning_readings.py  example.py  experiment_1.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py  mode_tracking.py  run_pyoma.py  updating_parameters.py
src/functions/: natural_freq.py  util.py
src/methods/: constants.py  model_update_module.py  sysID.py  sys_id.py
src/methods/pyoma/: genWrapper.py  ssiWrapper.py
src/mockPT/: README.md  find_offset.py  publish_samples.py
src/mock_PT/: DEVELOPER.md  README.md  find_offset.py  publish_samples.py
src/mock_PT/figures/: system-diagram.drawio
src/mock_setup/: find_offset.py  offset.json  publish_samples.py  setup.md
src/pt_mock/: constants.py  find_offset.py  publish_samples.py  requirements.txt
tests/cp-sens/methods/: test_sysID.py
tests/data/sources/: test_mqtt.py
tests/integration/input_data/: expected_sysid_output.npz  test_data.md
tests/integration/methods/: test_sys_id.py
tests/integration/mockPT_test/: constants.py  test_find_offset.py  test_publish_samples.py
tests/integration/mock_pt_test/: constants.py  test_find_offset.py  test_publish_samples.py
tests/methods/: test_sysID.py
tests/unit/methods/: test_sys_id_unit.py
tests/unit/mockPT_test/: constants.py  test_find_offset_unit.py  test_publish_samples_unit.py
(+36 files in other folders)
