[tool.poetry]
name = "example-shm"
version = "0.3.0"
description = "Demonstration for structural health monitoring of engineering structures"
authors = [
    "Mohamed Abdulkarim <202206332@post.au.dk>",
    "Prasad Talasila <prasadtalasila@gmail.com>"
]
readme = "README.md"
license = "INTO-CPS Association"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
paho-mqtt = "^2.1.0"
numpy = "^2.2.5"
click ="^8.1.8"
pyOMA-2 = "1.0.0"
yafem = { path = "src/methods/packages/yafem-0.2.6-py3-none-any.whl" }


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
